Tue Sep 23 12:20:35 CDT 2003 Adam Heath <doogie@debian.org>

  * configure.in: Add man/es/Makefile.
  
Tue Sep 23 12:12:38 CDT 2003 Adam Heath <doogie@debian.org>

  * debian/changelog: Set release date for 1.10.16.

Sat Sep 20 21:17:45 CDT 2003 Adam Heath <doogie@debian.org>

  * utils/md5sum.c: Fix handling of large files.

Sat Sep 20 20:42:35 CDT 2003 Adam Heath <doogie@debian.org>

  * man/*
    * Imported several translated manpages, from debian-doc cvs:
     * Spanish: 822-date.1 cleanup-info.8 deb-control.5 deb-old.5
       deb.5 dpkg-checkbuilddeps.1 dpkg-deb.1 dpkg-divert.8 dpkg-name.1
       dpkg-scanpackages.8 dpkg-split.8 dpkg-statoverride.8 dpkg.8
       dselect.8 md5sum.1 start-stop-daemon.8 update-alternatives.8
     * French: deb.5
     * Portuguese: dpkg.8 dselect.8
  * main/dpkg.8: -O had an inverted word.
  * po/cz.po: Improve translation of: "dpkg - warning: ignoring request to
    remove %s which isn't installed."
  * po/it.po: Fix missing space in translation when listing files, and the
    file is diverted.
  * po/pl.po:
    * Updated.
    * Fix translation of 'conflicts with'
  * po/ja.po: Fix typo in translation of dpkg --force-help; dowgrade ->
    downgrade
  * po/fr.po:
    * Fix translation when listing files, and the file is diverted.
    * Fix missing space in translation of: "%s - warning: downgrading %.250s
      from %.250s to %.250s.\n"
  * po/da.po: Fix translation of(was missing the leading space): " does not
    appear to be available\n"

Sat Sep 20 18:45:11 CDT 2003 Adam Heath <doogie@debian.org>

  * utils/start-stop-daemon.[c8]:
    * Add a -d|--chdir option to start-stop-daemon.
    * Split the background block into 2 parts: one that does the fork, and
      opens /dev/tty and /dev/null, and one that does everything else.  The
      second block is then moved to be run right before the exec.  This
      allows error messages to be seen from the child(previously, they were