@@ -50,6 +50,8 @@ dpkg (1.10.16) unstable; urgency=low
     Fix Danish translation of(was missing the leading space): " does not
     appear to be available\n"  Closes: #192972
   * Fix md5sum when handling large files.  Closes: #162691
+  * Fix dpkg-checkbuilddeps calling of parsedep.  It wasn't setting
+    use_arch.  Closes: #212796.
 
  -- Adam Heath <doogie@debian.org>  Tue, 23 Sep 2003 12:12:38 -0500
 
