@@ -1,3 +1,7 @@
+Sat Oct 25 12:47:22 CDT 2003 Adam Heath <doogie@debian.org>
+  * scripts/dpkg-checkbuilddeps.pl: Fix dpkg-checkbuilddeps calling of
+    parsedep.  It wasn't setting use_arch.
+
 Tue Sep 23 12:20:35 CDT 2003 Adam Heath <doogie@debian.org>
 
   * configure.in: Add man/es/Makefile.
